--- a/css/css.css
+++ b/css/css.css
@@ -77,7 +77,7 @@ p {
     line-height: 1.6; /* Set the line height for paragraphs */
     
     backdrop-filter: none; /* Disable blur effect on the paragraph */
-    font-family:'PP Pangaia';
+    font-family:'PP Pangaia', sans-serif;
     text-shadow: 1px 1px 2px rgba(143, 139, 139, 0.5); /* Add shadow to the text */
 }
 
